Better path handling in codeGenTool